--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-lottie-player": "^2.0.0",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
