--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"yarn next-dev\" \"yarn node-server\"",
+    "next-dev": "next dev",
+    "node-server": "nodemon server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,25 +13,35 @@
   "dependencies": {
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
+    "@hookform/resolvers": "^3.6.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
     "autoprefixer": "^10.4.19",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "framer-motion": "^11.2.6",
     "next": "^14.2.3",
+    "next-dev": "^1.2.3",
     "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-lottie-player": "^2.0.0",
     "supabase": ">=1.8.1",
-    "tailwind": "^4.0.0"
+    "tailwind": "^4.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "concurrently": "^8.2.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
